[🐛] Font cutoff (and other) issues (#1055)
* Change font type in HTRT too

* Add font-weight as required

--- a/features/polyTalkPreview/src/styles.css
+++ b/features/polyTalkPreview/src/styles.css
@@ -42,6 +42,7 @@
 
 .preview h1 {
     font-family: var(--jost-medium);
+    font-weight: 100;
     font-size: var(--font-size-xxl);
     margin-bottom: calc(var(--gdu) * 8);
     margin-top: calc(var(--gdu) * 8);
@@ -50,6 +51,7 @@
 
 .section-title {
     font-family: var(--jost-medium);
+    font-weight: 100;
     font-size: var(--font-size-xl);
     line-height: var(--line-height);
     margin-bottom: 0;
@@ -112,9 +114,10 @@
 }
 
 .info-stage h3 {
+    font-family: var(--jost-medium);
+    font-weight: 100;
     margin-top: 0;
     font-size: var(--font-size-l);
-    font-family: var(--jost-medium);
     margin-bottom: calc(var(--gdu) * 2);
 }
 
